webhook.yml
---
apiVersion: v1
kind: Service
metadata:
  name: auto-tracing-mutating-webhook
  labels:
    app: auto-tracing-mutating-webhook
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 5000
  selector:
    app: auto-tracing-mutating-webhook

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-tracing-mutating-webhook
  labels:
    app: auto-tracing-mutating-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-tracing-mutating-webhook
  template:
    metadata:
      name: auto-tracing-mutating-webhook
      labels:
        app: auto-tracing-mutating-webhook
    spec:
      containers:
        - name: auto-tracing-mutating-webhook
          image: k0diak/auto-tracing-webhook:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi
      #imagePullSecrets:
      #  - name: regcred
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: auto-tracing-mutating-webhook
  labels:
    app: auto-tracing-mutating-webhook
webhooks:
  - name: auto-tracing-mutating-webhook.default.svc.cluster.local
    clientConfig:
        #caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM4akNDQWRxZ0F3SUJBZ0lJUWM5QzB3WWVpMDB3RFFZSktvWklodmNOQVFFTEJRQXdGVEVUTUJFR0ExVUUKQXhNS2JXbHVhV3QxWW1WRFFUQWVGdzB4T1RFeU1qUXhPREF6TkRKYUZ3MHlNREV5TWpjeU1URTFORFJhTURReApGekFWQmdOVkJBb1REbk41YzNSbGJUcHRZWE4wWlhKek1Sa3dGd1lEVlFRREV4QnJkV0psY201bGRHVnpMV0ZrCmJXbHVNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXBqRkFVeHN5WWpNeTRUakEKandBTE0rSnJXaUplanJ6SU84RFRtWTE2dHRPaUVSMytrby9qbHloWDRvZUZjYW4xOXIvZHlOckt1Nktqa0JudgptNVo1c2lic [...]
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNVENDQWhtZ0F3SUJBZ0lKQUwwWHdBWXNCMG5HTUEwR0NTcUdTSWIzRFFFQkN3VUFNQzh4TFRBckJnTlYKQkFNTUpFRmtiV2x6YzJsdmJpQkRiMjUwY205c2JHVnlJRmRsWW1odmIyc2dSR1Z0YnlCRFFUQWVGdzB4T1RFeApNVEV4T0RNMk1qVmFGdzB4T1RFeU1URXhPRE0yTWpWYU1DOHhMVEFyQmdOVkJBTU1KRUZrYldsemMybHZiaUJECmIyNTBjbTlzYkdWeUlGZGxZbWh2YjJzZ1JHVnRieUJEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVAKQURDQ0FRb0NnZ0VCQU43a3ZrbmNVVHVicm1NYVYrOC81M0JvNm1jSUxlWTlEUG41ekswTStKODc2Q2FGaHNkWgoyZEJTMjU4S2c4 [...]
      service:
        name: auto-tracing-mutating-webhook
        namespace: default
        path: "/decorate"
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        autotrace: enabled
